# sidtools

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  config.h.in  configure  configure.in  sidtoolsrc.in
docs/: Makefile.am  Makefile.in  sidtools.info  sidtools.texinfo
src/: Makefile.am  Makefile.in  getopt.c  getopt1.c  makelist.c  makelist.h  parsecfg.c  parsecfg.h  search2list.c  search2list.h  sidlist.c  sidlist.h  sidplayo.c  sidplayo.h  sidtools.h
