dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/makelist.c)
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(sidtools, 1.0.1)

AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

CFLAGS="${CFLAGS} -DCONFIGDIR=\\\"${sysconfdir}/sidtoolsrc\\\""

AC_SUBST(GETOPT_FILES)
AC_SUBST(GETOPT_OBJ)
AC_SUBST(prefix)

AC_OUTPUT(Makefile \
	  sidtoolsrc \
	  src/Makefile \
	  docs/Makefile)
