# Copyright (C) 1999-2000 Linus Åkerlund <uxm165t@tninet.se>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

## Process this file with automake to produce Makefile.in

#LDADD = -lefence

bin_PROGRAMS = makelist sidlist sidplayo search2list

makelist_SOURCES = makelist.c makelist.h sidtools.h parsecfg.c parsecfg.h
sidlist_SOURCES = sidlist.c sidlist.h sidtools.h parsecfg.c parsecfg.h \
                  getopt.c getopt1.c getopt.h
sidplayo_SOURCES = sidplayo.c sidplayo.h parsecfg.c parsecfg.h
search2list_SOURCES = search2list.c search2list.h sidtools.h parsecfg.c \
                      parsecfg.h getopt.c getopt1.c getopt.h

